# foroushino

./: .gitignore  .tmp_bahram_backend_dump.sql  .tmp_bahram_clean_start.py  .tmp_bahram_full_deploy.py  .tmp_bahram_rsync_fix.py  .tmp_bahram_ssl_fix.py  .tmp_bahram_tunnel.py  .tmp_check_white.py  .tmp_deploy_white_fix.py  .tmp_diag_proxy.py  .tmp_force_restart.py  .tmp_log_status.py  .tmp_merged_server.env  .tmp_nginx_storage.py  .tmp_poll_bootstrap.py  .tmp_poll_finish.out  .tmp_poll_long.py  .tmp_restart_bootstrap.py  .tmp_sat_deploy_perf.py  .tmp_sat_deploy_sms.py  .tmp_sat_diag.py  .tmp_sat_diag2.py  .tmp_sat_diag3.py  .tmp_sat_fix_server.py  .tmp_server_env_current.txt  README.md  apply_fpm_tuning.py  apply_opcache.py  capacitor.config.ts  change_19.txt  change_9.txt  check_perf.py  check_perf2.py  check_perf3.py  deploy_remote.py  foroushino-debug.apk  index.html  package-lock.json  package.json  tailwind.config.js
bahram-cm/backend/: .env.example  README.md  _check_users.php  composer.json  package-lock.json  phpunit.xml  pyproject.toml  tmp_pin_old.php  tmp_user2.php
bahram-cm/backend/alembic/: env.py
bahram-cm/backend/app/: config.py  main.py
bahram-cm/backend/bootstrap/: app.php  providers.php
bahram-cm/backend/config/: app.php  auth.php  bahram.php  broadcasting.php  cors.php  database.php  family.php  filesystems.php  horizon.php  logging.php  purify.php  sanctum.php  scribe.php  security.php  services.php  telegram.php  telegram_bot.php  webpush.php
bahram-cm/backend/deploy/: nginx-telegram-webhook.conf.example  (+1 more)
bahram-cm/backend/routes/: api.php  (+5 more)
(+3577 files in other folders)
